--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:RuntimeMaster"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    Title="RuntimeMaster"
     Width="330"
     Height="50"
     AllowsTransparency="True"
@@ -51,7 +51,7 @@
                         FontSize="11"
                         FontWeight="Normal"
                         Foreground="{DynamicResource TextColor}"
-                        Text="Başlatılıyor..." />
+                        Text="Launching..." />
                     <ProgressBar
                         x:Name="ProgressBar"
                         Height="2"
