--- a/RuntimeSelectionWindow.xaml
+++ b/RuntimeSelectionWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="RuntimeMaster.RuntimeSelectionWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Runtime Seçimi"
+    Title="Runtime Selection"
     Width="320"
     Height="440"
     Background="White"
@@ -26,7 +26,7 @@
             VerticalAlignment="Center"
             FontSize="14"
             FontWeight="Medium"
-            Text="Kurulacak Runtime'ları Seçin" />
+            Text="Select Runtimes to Install" />
 
 
         <ScrollViewer
@@ -61,13 +61,13 @@
                 Margin="0,0,10,0"
                 BorderThickness="0"
                 Click="CancelButton_Click"
-                Content="İptal" />
+                Content="Cancel" />
             <Button
                 Width="80"
                 Height="26"
                 BorderThickness="0"
                 Click="InstallButton_Click"
-                Content="Kur" />
+                Content="Install" />
         </StackPanel>
     </Grid>
 </Window>
